# SuperBE

./: CMakeLists.txt  README  README.md  aggregate.py  analysis.cpp  analysis.h  cdw2014.py  cpp_cdw2014.py  cpp_selftest.py  helper.cpp  helper.h  superBE.py  superbe.cpp  superbe_core (with SLIC bugfix).cpp  superbe_core.cpp  superbe_core.h  superbe_webcam.cpp
cdwresults/: aggregate.py
